Update to 1.21
Expect bugs, had to change the entrypoint for `addmessage`, which might cause issues with other mods